--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,10 @@ OPENAI_API_KEY=
 # Get one at: https://github.com/settings/tokens → "admin:public_key" scope
 GITHUB_TOKEN=
 
+# Chezmoi dotfiles repo (optional — provisions fish shell, git aliases, prompt)
+# Set to your GitHub user/repo, e.g. danielmschmidt/dotfiles
+# DOTFILES_REPO=
+
 # ── Optional overrides (auto-detected if not set) ──────────────
 
 # Path to SSH public key (default: ~/.ssh/id_ed25519.pub or ~/.ssh/id_rsa.pub)
